<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallingFragment"

    >

    <!--
    <ToggleButton
        android:id="@+id/toggleButtonSilentMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:adjustViewBounds="true"
        android:checked="true"
        android:drawableStart="@drawable/toggle_drawable_silent_mode"
        android:scaleType="fitXY"
        android:text="ToggleButton"
        android:textOff="AV"
        android:textOn="PÅ"
        app:fabCustomSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/closeCall"
        app:layout_constraintVertical_bias="0.0" />
        -->

    <!--
    <ToggleButton
        android:id="@+id/toggleButtonMute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:checked="true"
        android:drawableStart="@drawable/toggle_drawable_mute"
        android:text="ToggleButton"
        android:textOff="AV"
        android:textOn="PÅ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/closeCall"
        app:layout_constraintVertical_bias="0.0" />
        -->

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="386dp"
        android:layout_height="405dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <Chronometer
        android:id="@+id/simpleChronometer"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view"
        android:layout_width="150sp"
        android:layout_height="2sp"
        android:background="#7D7D7D"
        app:layout_constraintBottom_toBottomOf="@+id/simpleChronometer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleChronometer" />

    <TextView
        android:id="@+id/caller_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Anna Olsson"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleChronometer"
        app:layout_constraintVertical_bias="0.012" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/closeCall"
        style="@null"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:backgroundTintMode="add"
        android:clickable="true"
        android:contentDescription="Button to close the call"
        android:src="@drawable/ic_hangup"
        app:borderWidth="0dp"
        app:fabCustomSize="40dp"
        app:layout_constraintBottom_toBottomOf="@id/buttonTranscribe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@id/buttonTranscribe"
        app:layout_constraintTop_toTopOf="@id/buttonTranscribe"
        app:layout_constraintVertical_bias="0.5"
        app:maxImageSize="30dp"
        app:tint="@color/white"
        app:useCompatPadding="false" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_calling"
        android:layout_width="410dp"
        android:layout_height="464dp"
        android:layout_marginTop="52dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/closeCall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleChronometer" />

    <ImageButton
        android:id="@+id/recordingBusy"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Button that shows recording is not available"
        android:scaleType="fitXY"
        android:src="@android:drawable/presence_busy"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/buttonTranscribe"
        app:layout_constraintEnd_toStartOf="@+id/buttonTranscribe"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonTranscribe"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <com.example.sub.RecordProgress
        android:id="@+id/buttonTranscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transcribe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.950" />

    <ImageButton
        android:id="@+id/recordingAvailable"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Button that shows recording is available"
        android:scaleType="fitXY"
        android:src="@android:drawable/presence_online"
        app:layout_constraintBottom_toBottomOf="@+id/buttonTranscribe"
        app:layout_constraintEnd_toStartOf="@+id/buttonTranscribe"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonTranscribe"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>