...
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/callButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:clickable="true"
        android:src="@drawable/ic_call"
        app:fabCustomSize="70dp"
...
